assets/css/style.css
/*Importing Google Fonts*/
@import url('https://fonts.googleapis.com/css2?family=Gayathri:wght@100;400;700&display=swap');

/*Overriding the default browswer settings from very generic using Astric */
*{
    margin: 0;
    padding: 0;
    /*to let the elements have width and height as defined regardless the padding and border*/
    box-sizing: border-box;
}

body{
    min-height: 200vh;
    background-color:coral;
    /*display to flex and direction is column to let elements shows under each other*/
    display: flex;
    flex-direction: column;
}

/*unifying header and paragraphs fonts, color letter spacing*/
h1, h2, h3,h4, p{
    font-family: 'Gayathri', sans-serif;
    letter-spacing: 2px;
    color: greenyellow;
}

header{
    background-color:#ffffff;
    padding: 0 1rem;
    /*this will make the header section always at the tope*/
    position:fixed;
    z-index: 999;
    box-shadow: 0 5px 5px rgb(255, 163, 68);
    width: 100%;
    display: flex;
    justify-content: space-between;
    align-items: center;
    font-family: 'Gayathri', sans-serif;
}
header>a>img{
    width: 85px;
    height: 85px;
}

a{
    text-decoration: none;
}
/*Applying dropdown for mobile views*/
nav{
    position: absolute;
    left: 0;
    background-color: #ffffff;
    width: 100%;
    padding-left: 10px;
    /*default display for mobile devices*/
    display: none;
    top: 100%; /*let the nav starts at the bottom of its parent**/
}
/*dropdown of menubar*/
#nav-menu-toggle:checked~nav{
    display: block;
}
/*hid the check box since we don't need it to be shown**/
#nav-menu-toggle{
    display: none;
}
.nav-menu-label{
    font-size: 250%;
}

.nav-menu-label i{
    color: rgb(97,192,77);
    padding: 10px 10px;
}
#menubar{
    letter-spacing: 2px;
    font-size: 110%;
    list-style-type: none;
}
#menubar li{
    margin-bottom: 0.5em;
}
#menubar >li a{
    color: rgb(97,192,77);
}
.active-page{
    border-bottom: 2px solid rgb(255 163 68);
}


/*main content should make use of most space avalable on the behalf of other elements*/
main{
    background-color: #ffffff;
    /*flex shorthand : flex-grow flex-shrink flex-basis*/
    flex:1 0 auto;
    margin-top: 93px;

}
#clean-energy-hero-img{
    width: 100%;
    height: 600px;
    
    /*set background clolor incase img not loaded*/
    background-color: lightblue;
    /*short hand syntas path, style, horizonal and vertical / adapt automatically to content*/
    background: url(../images/solarpanel-windmils-snow.jpg) no-repeat center center/cover;
    /*using positon as relative we can position all elements inside this element at defined cordinates*/
    position: relative;
}

#home-pg-cover-txt{
    background-color:rgb(0, 148, 168, .6);
    text-align: center;
    width: 90%;
    /*all text inside this ID must be relative to the parent element and positoned center*/
    position: absolute;
    bottom: 5%;
    left: 5%;
}
#home-pg-cover-txt > h1, #home-pg-cover-txt > p{
    font-size: 140%;
    font-weight: 800;
    padding: 10px;
    color:rgb(255, 163, 68);
}

/*Styling footer*/
footer{
    /*Same background colr as header ~ it may havedifferent color in future styling*/
    background-color: #ffffff;
}
#social-media-links{
    text-align: center;
    display: flex;
    justify-content: space-evenly;
    padding: 5px 10px;
    font-size: 250%;
    list-style-type: none;
}

#social-media-links i{
    margin: 10px 10px;
    color: rgb(97,192,77);
}

/*Media Queryies for larger screens iPad and onward*/
@media screen and (min-width:768px) {
    /*starting with navigation*/
    nav{
        display: block;
        position: relative;
        padding: 10px;
    }

    #menubar{
        display: flex;
        justify-content: center;
        align-items: center;
    }
    #menubar li{
        align-self: center;
        padding: 1rem;
        margin-bottom: 0;
        font-size: 1.5rem;
        font-weight: bolder;
        letter-spacing: 3px;
    }
    .nav-menu-label{
        display: none;
    }

}

@media screen and (min-width: 992px) {
    header{
        box-shadow: none;
    }
    #menubar li{
        padding: 0.5rem 1.5rem;
    }
    li a{
        vertical-align: middle;
    }
    li:hover{
        background-color: rgb(255 163 68 );
        border-top-right-radius: 10%;
        border-bottom-left-radius: 10%;
        border: 1px solid rgb(0 148 168) ; 
    }
   
    #home-pg-cover-txt{
        background-color:rgb(0, 148, 168, .6);
        text-align: center;
        width: 60%;
        /*all text inside this ID must be relative to the parent element and positoned center*/
        position: absolute;
        bottom: 25%;
        left: 20%;
    }
}

